--- a/MvcProjectCamp/Views/Default/Index.cshtml
+++ b/MvcProjectCamp/Views/Default/Index.cshtml
@@ -1,7 +1,16 @@
 ﻿@using EntityLayer.Concrete
 @model List<Content>
 
+<br />
 <!DOCTYPE html>
+
+@{
+    var headers = Model.ToArray();
+    foreach (var item in headers)
+    {
+        ViewBag.header = item.Heading.HeadingName;
+    }
+}
 <html>
 <body class="hold-transition sidebar-mini">
     <!-- Site wrapper -->
@@ -14,11 +23,24 @@
                     <div class="col-md-12">
                         <!-- The time line -->
                         <div class="timeline">
+                            <!-- Main Header-->
+                            <div class="time-label">
+                                <span class="bg-info">
+                                    <a href="#">
+                                        @ViewBag.header
+                                    </a>
+                                </span>
+                            </div>
+                            <!-- Main Header-->
                             <!-- timeline time label -->
                             @foreach (var item in Model)
                             {
                                 <div class="time-label">
-                                    <span class="bg-success">@(((DateTime)item.ContentDate).ToString("dd-MMM-yyyy"))</span>
+                                    <span class="bg-success">
+                                        <a href="#">
+                                            @(((DateTime)item.ContentDate).ToString("dd.MMM.yyyy"))
+                                        </a>
+                                    </span>
                                 </div>
                                 <!-- /.timeline-label -->
                                 <!-- timeline item -->
@@ -27,16 +49,16 @@
                                     <div class="timeline-item">
                                         <h3 class="timeline-header">
                                             <a href="#">
-                                                @item.Heading.HeadingName
-                                        </a>
-                                    </h3>
-                                    <div class="timeline-body">
-                                        @item.ContentValue
+                                                @item.Writer.WriterName @item.Writer.WriterSurName
+                                            </a>
+                                        </h3>
+                                        <div class="timeline-body">
+                                            @item.ContentValue
+                                        </div>
                                     </div>
                                 </div>
-                            </div>
-                            <!-- END timeline item -->
-                        }
+                                <!-- END timeline item -->
+                            }
                         </div>
                     </div>
                     <!-- /.col -->
