New features added.

--- a/MvcProjectCamp/Views/Home/HomePage.cshtml
+++ b/MvcProjectCamp/Views/Home/HomePage.cshtml
@@ -3,6 +3,10 @@
 }
 <!DOCTYPE html>
 
+@{ 
+    string NidakuleMapUrl = "https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d24086.99624142253!2d29.104157699999995!3d41.00611935!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x14cac88231387a19%3A0x1c290dca99a54391!2sNidakule%20Ata%C5%9Fehir%20Kuzey!5e0!3m2!1str!2str!4v1660285492684!5m2!1str!2str";
+}
+
 <!--
 Author: W3layouts
 Author URL: http://w3layouts.com
@@ -699,6 +703,9 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                 </div>
             </div>
         </div>
+        <iframe src="@NidakuleMapUrl" width="1500" height="450" style="border:0; margin-left: 300px; margin-bottom: 100px; justify-content: center"
+                allowfullscreen="" loading="lazy" 
+                referrerpolicy="no-referrer-when-downgrade"></iframe>
     </footer>
     <!--//footer-->
     <!--model-forms-->
