--- a/MvcProjectCamp/Views/Test/Test3.cshtml
+++ b/MvcProjectCamp/Views/Test/Test3.cshtml
@@ -4,25 +4,30 @@
     Layout = "~/Views/Shared/_AdminLayout.cshtml";
 }
 
+<style>
+    .redText {
+        color: red;
+    }
+
+    .blackText {
+        color: black;
+        font-weight: bold;
+    }
+</style>
+
 <h4>To Do</h4>
 <br />
 <p>
-    Başlıklarda Arama Kutusu
+    <del>Başlıklarda Arama Kutusu</del>
 </p>
 <p>
     <del>Yazar Görselleri</del>
 </p>
 <p>
-    Grafikler
-</p>
-<p>
     <del>Vitrin Teması</del>
 </p>
 <p>
-    Gelen Kutusunda Arama
-</p>
-<p>
-    Yetkilendirmeler
+    <del>Gelen Kutusunda Arama</del>
 </p>
 <p>
     <del>Hata Sayfası Layouttan Ayrılacak</del>
@@ -31,7 +36,7 @@
     <del>Sözlük ve Vitrin Ayrılacak</del>
 </p>
 <p>
-    Herhangi Bir Tablo Raporlanacak
+    <del>Herhangi Bir Tablo Raporlanacak</del>
 </p>
 <p>
     Proje Dosyaları Sunucuya Taşınacak
@@ -46,8 +51,16 @@
     Url'de ID yerine isim gelsin
 </p>
 <p>
-    IFrame Ekleme
+    <del>IFrame Ekleme</del>
 </p>
 <p>
-    SweetAlert
+    <del>SweetAlert</del>
 </p>
+<p>
+    Admin Çıkış Yap
+</p>
+<br />
+<p class="blackText">Missings</p>
+<span class="redText">Googler Charts: </span>&nbsp;<span class="blackText">Ders 94</span>
+<br />
+<span class="redText">Yetkilendirmeler: </span>&nbsp;<span class="blackText">Ders 96</span>
